cloud-cluster/nginx-ingress/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bee-guardians-ingress-dev
  namespace: ns-app
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: dev.bee-guardians.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-dev
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-dev
                port:
                  number: 80
